Master: Home arrow on the blog was fixed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,14 @@
 @import url("https://fonts.googleapis.com/css?family=Amatic+SC:400,700&subset=cyrillic,hebrew,latin-ext,vietnamese");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap");
-@media screen and (min-height: 320px) and (max-height: 768) {
+@media screen and (min-height: 320px) and (max-height: 768px) {
   .sidenav a {
     font-size: 18px; }
   .sidenav p {
     padding-left: 0px;
-    padding-right: 0px; } }
+    padding-right: 0px; }
+  .home-arrow {
+    left: 5px !important; } }
 
 .btn.btn-primary {
   font-family: 'Josefin Sans', sans-serif;
