--- a/assets/scss/layout/_responsive.scss
+++ b/assets/scss/layout/_responsive.scss
@@ -1,4 +1,4 @@
-@media screen and (min-height:320px) and (max-height: 768) {
+@media screen and (min-height:320px) and (max-height: 768px) {
 
     .sidenav a {
       font-size: 18px;
@@ -7,5 +7,9 @@
     .sidenav p {
       padding-left: 0px;
       padding-right: 0px;
+    }
+
+    .home-arrow {
+      left: 5px !important;
     }
 }
